--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bootstrap": "^5.3.3",
     "express": "^4.21.2",
+    "mysql2": "^3.12.0",
     "path": "^0.12.7"
   }
 }
